stop using padding trick to create gap
aspect-ratio and gap are incompatible so padding trick has long
been used. But aspect-ratio settings were removed in the previous
commit, so we can simply use gap.

--- a/fujimusubi/index.css
+++ b/fujimusubi/index.css
@@ -115,6 +115,7 @@ h1 small {
 }
 #album .tiles {
   display: grid;
+  gap: 2px;
   grid-auto-flow: dense;
   grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
 }
@@ -135,11 +136,9 @@ h1 small {
   grid-row: span 2;
 }
 #album .tiles img {
-  background-clip: content-box;
   background-color: #d0d0d0;
   height: 100%;
   object-fit: cover;
-  padding: 1px;
   width: 100%;
 }
 #album .tiles a:hover {
