--- a/index.css
+++ b/index.css
@@ -201,6 +201,7 @@ h1 small {
   /* <figure> has multiple subfigures */
   &:has(.lr, .lrl, .lrr, .lrlr) {
     display: grid;
+    gap: 2px;
     grid-auto-flow: dense;
     grid-template-columns: 1fr 1fr;
   }
@@ -219,11 +220,9 @@ h1 small {
   text-align: center;
 }
 #kisaragisai-2026 figure img {
-  background-clip: content-box;
   background-color: #d0d0d0;
   height: 100%;
   object-fit: cover;
-  padding: 1px;
   width: 100%;
 }
 #kisaragisai-2026 figure a:hover {
@@ -307,6 +306,7 @@ h1 small {
 }
 #news .tiles {
   display: grid;
+  gap: 2px;
   grid-auto-flow: dense;
   grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
 }
@@ -327,11 +327,9 @@ h1 small {
   grid-row: span 2;
 }
 #news .tiles img {
-  background-clip: content-box;
   background-color: #d0d0d0;
   height: 100%;
   object-fit: cover;
-  padding: 1px;
   width: 100%;
 }
 #news .tiles a:hover {
