--- a/news/index.css
+++ b/news/index.css
@@ -142,6 +142,7 @@ article dd li {
 }
 article .tiles {
   display: grid;
+  gap: 2px;
   grid-auto-flow: dense;
   grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
 }
@@ -162,11 +163,9 @@ article .tile3x2 {
   grid-row: span 2;
 }
 article .tiles img {
-  background-clip: content-box;
   background-color: #d0d0d0;
   height: 100%;
   object-fit: cover;
-  padding: 1px;
   width: 100%;
 }
 article .tiles a:hover {
